[project]
name = "fastapi-meeting-service"
version = "0.1.0"
description = ""
authors = [
    { name = "Seung Yeoul", email = "seungyeoul@kakao.com" }
]
requires-python = ">=3.14"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
