[project]
name = "fastapi-meeting-service"
version = "0.1.0"
description = ""
authors = [
    { name = "Seung Yeoul", email = "seungyeoul@kakao.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "sqlalchemy-utc (>=0.14.0,<0.15.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
